# Hack2025

./: .env.example  README.md  docker-compose.yaml  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  start_command.py
backend/migrations/: env.py
backend/migrations/versions/: 0157aa016058_create_refresh_token_in_db.py  12fab13d2520_add_all_tabels.py  9b2a98329b9a_at_int_role.py
backend/src/: bootstrap.py  config.py  database.py  dependency.py  dependensy.py  logger_config.py  models.py
backend/src/auth/: endpoint.py  schemas.py
backend/src/card_of_poject/: model.py
backend/src/card_of_poject/api/: comment.py  dependencies.py  finansial.py  history.py  project_prediction.py  projects.py  references.py  report_dashboard.py
backend/src/card_of_poject/repository/: __init__.py  base_repository.py  financial.py  financila.py  history.py  project.py  references.py
backend/src/card_of_poject/schemas/: base.py  comment.py  financial.py  history.py  prediction.py  project.py  references.py  report.py
backend/src/card_of_poject/shemas/: project.py
backend/src/core/: exceptions.py  handlers.py  reposiory.py  repository.py
backend/src/core/auth/: current.py  dto.py  hasher.py  models.py  repository.py  secure.py
backend/src/core/minio/: handler.py  utils.py
backend/src/core/models/: __init__.py  common.py  id.py  role.py
backend/src/file/: endpoint.py  endpoint_secure.py
backend/src/key/: README.md
frontend/: Dockerfile  README.md  README_AUTH.md  index.html  package-lock.json  package.json  (+1 more)
(+35 files in other folders)
